# brand-detector-django

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
apps/api/: urls.py
apps/api/v1/: shared_services.py  urls.py
apps/api/v1/controllers/: classification.py  dashboard.py  detection.py  health.py
apps/api/v1/requests/: __init__.py  base_request.py  classification_requests.py  detection_requests.py
apps/core/: models.py
apps/core/enums/: __init__.py  device_type.py  file_type.py  model_type.py  processing_status.py
apps/core/migrations/: 0001_initial.py  0002_add_session_settings.py  0003_remove_processingsession_create_video_and_more.py
apps/core/models/: __init__.py  classification.py  detection.py  frame.py  session.py  session_summary.py
apps/services/classification/: classification_service.py
apps/services/counting/: counting_service.py
apps/services/detection/: detection_service.py
apps/services/image/: image_service.py
apps/services/model/: classification_model_service.py  model_service.py
apps/utils/: __init__.py  file_helpers.py  image_helpers.py  validators.py  video_helpers.py
config/: __init__.py  app_config.py
detector/: asgi.py  settings.py  urls.py  wsgi.py
